# Scopra

./: .dockerignore  .env.example  .gitignore  API.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  go.mod  go.sum
backend/cmd/api/: main.go
backend/migrations/: 001_init.sql
backend/src/api/: handlers.go
backend/src/config/: config.go
backend/src/middleware/: auth.go  correlation_id.go  metrics.go  rate_limit.go
backend/src/models/: types.go
backend/src/repositories/: interfaces.go  postgres_repository.go
backend/src/server/: app.go
backend/src/services/: auth_service.go  connector_service.go  token_service.go  tool_call_service.go
backend/src/utils/: logger.go
backend/tests/e2e/: smoke_flow_test.go
backend/tests/integration/: agent_upsert_test.go  health_route_test.go
cli/: .env.example  Cargo.toml  Dockerfile
cli/src/: error.rs  lib.rs  main.rs
cli/src/client/: api_client.rs
cli/src/commands/: actions.rs
cli/src/config/: app_config.rs
cli/src/utils/: output.rs
cli/tests/: config_test.rs
common/constants/: index.ts
common/openapi/: openapi.yaml
common/schemas/: tool-call.schema.ts
common/types/: domain.ts
docs/: ARCHITECTURE.md  TECHNICAL_DEBT.md
docs/adr/: 0001-gateway-language-choice.md  0002-cli-runtime-choice.md  0003-audit-integrity.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: layout.tsx  (+1 more)
frontend/tests/: cn.test.ts
nginx/: default.conf
scripts/: bootstrap.sh  check.sh
(+9 files in other folders)
