[package]
name = "nexus-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "fs"] }
dirs = "5.0.1"
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.14.0"
